--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,10 @@ body{
 /* nabar styling */
 .navs{
     font-size: 26px;
-    margin-top: 20px;
+    margin-top: 4px;
+}
+.toggle-bar {
+    display: none;
 }
 .navs a{
     text-decoration-line: none;
@@ -17,15 +20,15 @@ body{
     padding: 8px;
 }
 .search-bar-input{
-    width: 30rem;
-    font-size: 28px;
+    width: 20rem;
+    font-size: 20px;
     border-radius: 25px;
 }
 .search-bar-input:focus{
     outline: none;
 }
 .search-button{
-    font-size: 28px;
+    font-size: 20px;
     border-radius: 25px;
 
 }
@@ -37,6 +40,22 @@ body{
     justify-content: space-around;
     background-color: #EEEEEE;
 }
+/* If the screen size is 600px wide or less, hide the element */
+@media only screen and (max-width: 600px) {
+    .navs{
+        display: none;
+    }
+    .toggle-bar{
+        display: inline;
+    }
+    .toggle-bar div{
+        width: 35px;
+        height: 5px;
+        background-color: black;
+        margin: 6px auto;
+    }
+}
+
 /* end of navbar styling */
 
 /* card styling */
@@ -52,4 +71,18 @@ body{
     padding: 8px;
     width: 50%;
     height: 50%;
+}
+
+/* end of card styling */
+@media only screen and (max-width: 600px){
+    .weather-updates-container{
+        display: none;
+    }
+    .card-container .row .card {
+        border: 2px solid black;
+        border-radius: 5px;
+        padding: 8px;
+        width: 100%;
+        height: 100%;
+    }
 }
