--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,9 +24,10 @@ body{
 }
 .search-bar{
     padding: 8px;
+    display: flex;
 }
 .search-bar-input{
-    width: 20rem;
+    width: 15rem;
     font-size: 20px;
     border-radius: 25px;
 }
@@ -86,7 +87,7 @@ body{
         width: 32px;
         height: 5px;
         background-color: black;
-        margin: 6px auto;
+        margin: 8px auto;
     }
     .bar{
         cursor: pointer;
@@ -108,6 +109,9 @@ body{
     width: 50%;
     height: 50%;
 }
+.weather-searches-card-body-inactive{
+    display: none;
+}
 .weather-updates-container{
     border-left: 2px solid #EEEEEE;
 }
@@ -118,7 +122,6 @@ body{
         display: none;
     }
     .card-container .row .card {
-        border: 2px solid black;
         border-radius: 5px;
         padding: 8px;
         width: 100%;
@@ -128,7 +131,11 @@ body{
 
 .weather-container{
     width: 50%;
-    margin:  0 auto;
+    margin:  10px auto;
+    font-weight: bold;
+}
+.weather-container p b{
+    font-size:24px;
 }
 .weather-search-container{
     background-color: #EEEEEE;
